--- a/core/resources/ilwis.config
+++ b/core/resources/ilwis.config
@@ -1,3 +1,6 @@
 {
-	"grid-blocksize": 1500
+    "system-settings": {
+        "grid-blocksize": 1500,
+        "resource-root": "app-base"
+    }
 }
