--- a/core/resources/ilwis.config
+++ b/core/resources/ilwis.config
@@ -2,5 +2,12 @@
     "system-settings": {
         "grid-blocksize": 1500,
         "resource-root": "app-base"
+    },
+    "users":
+    {
+        "user-0":
+        {
+            "workingcatalog": "file:\/\/\/e:\/kees"
+        }
     }
 }
